@@ -26,6 +26,7 @@ Also:
 - Sealing SteerForNeighbors.CalculateForce to make it absolutely clear subclasses should not override it.
 - New SteerForMatchingVelocity behavior.
 - Improvements and new properties on SteerForCohesion and SteerForSeparation.
+- New Vehicle.DeltaTime property.
 
 
 v2.7
